# Copper

./: .gitignore  CMakeLists.txt  build_ut.sh  fbuild_ut.sh  readme.md  run_ut.sh
include/: buffer.h  common.h  copper.h  debug.h  vector_utils.h
include/interface/: buffer.h  copper.h  index.h  storage.h
include/single_node/in_memory/: buffer_manager.h  copper.h
src/single_node/in_memory/: copper.cpp
ut/: Makefile  readme.md  test_copper_index.cpp  test_debug_utils.cpp  test_vector.cpp
